# iot2

./: .gitignore  README.md  gui_t2.ui  main.py  server.py  test.py
db/: db.py
db/data/: build.sql  fields.json
esp/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp/components/connection/: CMakeLists.txt
esp/components/connection/include/: ble_server.h  client_tcp.h  client_udp.h  protocols.h  status.h  system_utils.h  wifi.h
esp/components/connection/src/: ble_server.c  client_tcp.c  client_udp.c  status.c  system_utils.c  wifi.c
esp/components/payload/: CMakeLists.txt
esp/components/payload/include/: decoding.h  encoding.h  payload_sizes.h  recv_payload.h  send_payload.h  sensors.h
esp/components/payload/src/: decoding.c  encoding.c  recv_payload.c  send_payload.c  sensors.c
esp/components/utils/: CMakeLists.txt
esp/components/utils/include/: utils.h
esp/components/utils/src/: system_utils.c  utils.c
esp/main/: main.c
server/: README.md  ble.py  button.py  connectionTCP.py  db.py  main.py  plot.py  test.py  test_ble.py  test_ip.py  test_wifi.py  ui.py
server/db/: db.py
server/db/data/: build.sql  fields.json
server/gui/: button.py  plot.py  ui.py  utils.py
server/src/: ble_conn.py  tcp_conn.py  udp_conn.py
server/utils/: config.py  payload.py
src/: tcp_conn.py  udp_conn.py
utils/: config.py  payload.py
